<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/service3_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/service_3"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/createAccount_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/service2_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/service_2"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/service3_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="293dp"
        android:layout_height="101dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="292dp"
        android:layout_height="74dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/museo_sans_500"
        android:text="@string/title_text_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/service1_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/checkmark1_imageView"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/check_mark"
        app:layout_constraintBottom_toTopOf="@+id/checkmark2_imageView"
        app:layout_constraintEnd_toStartOf="@+id/service1_textView"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_textView"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/checkmark2_imageView"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/check_mark"
        app:layout_constraintBottom_toTopOf="@+id/checkmark3_imageView"
        app:layout_constraintEnd_toStartOf="@+id/service2_textView"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/checkmark3_imageView"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="220dp"
        android:contentDescription="@string/check_mark"
        app:layout_constraintBottom_toTopOf="@+id/createAccount_button"
        app:layout_constraintEnd_toStartOf="@+id/service3_textView"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/service1_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/service_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/service2_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/createAccount_button"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient_button_background"
        app:backgroundTint="@null"
        app:tint="@null"
        android:foreground="?android:attr/selectableItemBackground"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>